--- a/index.html
+++ b/index.html
@@ -1,23 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treinamento Ada</title>
-</head>
-<body><h1>Olá Yasmin</h1>
-   <p id="mensagem"></p>
-
- 
-<script>
-const users = ["palmer", "ju", "natalia"];
-const money = {
-  palmer: 100,
-  ju: 50000,
-  natalia: 0,
-};
-</script>
-  
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ada - Carrinho de Compras</title>
+    <link rel="stylesheet" href="./styles.css">
+  </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <h1>Adesivos Rick and Morty</h1>
+      </header>
+      <main class="main">
+        <section class="section">
+          <h2>Produtos</h2>
+          <div class="items" id="products">
+            <!-- item -->
+            <!-- 
+            <div class="item" data-id="1">
+              <div class="item__group">
+                <img src="image" alt="" class="sticker" />
+                <h3>Nome</h3>
+              </div>
+              <div class="item__group">
+                <div class="quantity-control">
+                  <button type="button" class="quantity-btn decrease">-</button>
+                  <span class="quantity-value" aria-live="polite">1</span>
+                  <button type="button" class="quantity-btn increase">+</button>
+                </div>
+                <button type="button" class="delete-btn" id="add-to-cart">
+                  &times;
+                </button>
+              </div>
+            </div> -->
+            <!-- item -->
+          </div>
+        </section>
+        <section class="section">
+          <h2>Carrinho de Compras</h2>
+          <div class="items" id="cart_products">
+            <!-- <div class="item">
+              <div class="item__group">
+                <img src="image" alt="" class="image" />
+                <h3>Nome</h3>
+              </div>
+              <div class="item__group">
+                <output class="quantity-value">1</output>
+              </div>
+            </div> -->
+          </div>
+          <div class="item">
+            <div class="item__group">
+              <h3>Total</h3>
+            </div>
+            <div class="item__group">
+              <span id="cart_total" class="quantity-value">0</span>
+            </div>
+          </div>
+          <button disabled class="checkout-btn" id="cart_checkout">
+            Finalizar Compra
+          </button>
+        </section>
+      </main>
+    </div>
+    <script type="module" src="./main.js"></script>
+  </body>
 </html>
