--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ada - Carrinho de Compras</title>
-    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <div class="container">
@@ -63,6 +63,6 @@
         </section>
       </main>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
